@@ -22,6 +22,7 @@ import com.android.launcher3.CellLayout;
 import com.android.launcher3.Utilities;
 import com.android.launcher3.util.CellAndSpan;
 import com.android.launcher3.util.GridOccupancy;
+import com.patrykmichalik.opto.core.PreferenceExtensionsKt;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -131,6 +132,11 @@ public class ReorderAlgorithm {
         ArrayList<View> intersectingViews = new ArrayList<>();
         Rect occupiedRect = new Rect(cellX, cellY, cellX + spanX, cellY + spanY);
 
+        if (PreferenceExtensionsKt.firstBlocking(mCellLayout.pref.getAllowWidgetOverlap())) {
+            solution.intersectingViews = new ArrayList<>(intersectingViews);
+            return true;
+        }
+
         // Mark the desired location of the view currently being dragged.
         if (ignoreView != null) {
             CellAndSpan c = solution.map.get(ignoreView);
@@ -150,18 +156,11 @@ public class ReorderAlgorithm {
         ).thenComparing(
                 view -> ((CellLayoutLayoutParams) ((View) view).getLayoutParams()).getCellY()
         );
-        List<View> views = new ArrayList<>();
-        if (Utilities.ATLEAST_U) {
-            views = solution.map.keySet().stream().sorted(comparator).toList();
-        } else {
-            List<Object> keys = new ArrayList<>(solution.map.keySet());
-            for (Object key : keys) {
-                if (key instanceof View) {
-                    views.add((View) key);
-                }
-            }
-            views.sort(comparator);
-        }
+        List<View> views = solution.map.keySet().stream()
+                .filter(View.class::isInstance)
+                .map(View.class::cast)
+                .collect(Collectors.toList());
+        views.sort(comparator);
         for (View child : views) {
             if (child == ignoreView) continue;
             CellAndSpan c = solution.map.get(child);
